--- a/TestParse/Woovent-Info.plist
+++ b/TestParse/Woovent-Info.plist
@@ -34,7 +34,7 @@
 	<key>FacebookAppID</key>
 	<string>493616390746321</string>
 	<key>FacebookDisplayName</key>
-	<string>Testadri</string>
+	<string>Woovent</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>UIBackgroundModes</key>
@@ -47,6 +47,8 @@
 	<array>
 		<string>armv7</string>
 	</array>
+	<key>UIStatusBarHidden</key>
+	<true/>
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
